# nrg-seminar

./: .gitignore  CMakeLists.txt  README.md
docs/: assets_attribution.md
shaders/: brdf_lut.frag  equirect_to_cube.frag  irradiance_conv.frag  pbr.frag  pbr.vert  prefilter_specular.frag  prefilter_specular.vert  skybox.frag  skybox.vert
src/: brdf_lut.cpp  brdf_lut.h  env_map.cpp  env_map.h  gl_context.cpp  gl_context.h  irradiance.cpp  irradiance.h  main.cpp  pbr_renderer.cpp  pbr_renderer.h  prefilter.cpp  prefilter.h  ui.cpp  ui.h
